--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,9 @@ footer {
 .contenuto h2 a {
     color: #b7410e;
     font-family: inter;
+    text-decoration: underline;
 }
+
 
 @media (max-width:600px) /* o la misura che volete */  {
     .galleria-immagini, .container-footer {
@@ -220,10 +222,14 @@ footer {
     color: #ffffff;
     font-weight: 700!important;
     font-family: "inter";
-    text-decoration: underline;
+    text-decoration: none;
     font-size: 11px!important;
     padding: 20px;
     text-align: center;
+}
+
+.titolocard2 :hover{
+    text-decoration: underline;
 }
 
 .immaginefooter2 {
@@ -269,8 +275,18 @@ footer {
     line-height: 0px ;
 }
 
-.titoloslidernero {
-    color: #000000;
+.titolosliderbianco {
+    color: white;
+    font-family: "Playfair Display";
+    font-size: 88px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 90px;
+    padding: 0px 0px 0px 320px;
+}
+
+.titolosliderazzurro {
+    color: #105483;
     font-family: "Playfair Display";
     font-size: 88px;
     font-style: normal;
@@ -300,3 +316,4 @@ footer {
     font-weight: 700;
     font-family: 'Playfair display';
 }
+
